k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: mateusclira/nodeapp:latest
          resources:
            requests: 
              cpu: "0.5"
              memory: 250Mi
            limits:
              cpu: "0.5"
              memory: 500Mi
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP

      restartPolicy: Always
