k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    db: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        db: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          resources:
            requests: 
              cpu: "0.5"
              memory: 250Mi
            limits:
              cpu: "0.5"
              memory: 500Mi
          ports:
            - containerPort: 27017
              hostPort: 27017
              protocol: TCP             
          volumeMounts:
            - mountPath: /data/db
              name: mongo-claim0
      restartPolicy: Always
      volumes:
        - name: mongo-claim0
          persistentVolumeClaim:
            claimName: mongo-claim0
