k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    db: mongo
  name: mongo
spec:
  ports:
   - port: 27017
  selector:
    db: mongo
